# CR_Question_New_Model_arch

./: .gitignore  CMakeLists.txt  CSVReader.h  CommandLineParser.cpp  CoreDBInterface.h  PlannerTaskScheduleDB.sql  QuestionCode.txt  TaskList.cpp  TaskModel.cpp  TestCodeQuestion.txt  TestDBInterfaceCore.h  TestTaskDBInterface.h  TestUserDBInterface.cpp  UserList.h  cmakeclean.sh  commonUtilities.cpp  commonUtilities.h  main.cpp  protofulltest.sh  testOut_forDiff.txt
Models/: CoreDBInterface.cpp  ListDBInterface.h  ModelDBInterface.cpp  ModelDBInterface.h  TaskList.h  TaskModel.h  UserList.cpp  UserModel.cpp  UserModel.h
UnitTests/: TestDBInterfaceCore.cpp  TestTaskDBInterface.cpp  TestUserDBInterface.h  unitTestValgrindSuppressExpectedErrors.supp  valgrindOut_forDiff.txt
